@@ -12,7 +12,7 @@
 ## Author: |cff00ff00ALA|r
 ## Author-zhCN: |cff00ff00ALA|r
 ## Author-zhTW: |cff00ff00ALA|r
-## Version: 404r.250422
+## Version: 404r.250506
 
 ## Title-zhTW: |cffFF7373[職業]|r 天賦模擬器
 ## Notes-zhTW: ala's Talent Emu |n|n包括了天賦模擬器和範本的功能，能夠從暴雪或 Wowhead 網站的天賦模擬器匯入天賦，或是將點好的天賦分享給其他玩家。|n|n|cffffd200使用方法: |r輸入 /ate  打開天賦模擬器。|n|n點天賦模擬器視窗左上角的小圖示，進行設定。
